--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="logo.png" />
+    <link rel="icon" type="image/svg+xml" href="https://ik.imagekit.io/74nbdkozh/logo.png?updatedAt=1757604511499" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blog App</title>
     <link
